--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.92 2002/06/15 18:14:39 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.93 2002/06/25 04:09:07 phil_e Exp $)
 AC_PREREQ(2.13)
 AC_INIT(libop/op_config.h)
 
@@ -43,6 +43,24 @@ AC_TRY_COMPILE( [#include <linux/config.h>],
 break_me_hard(\\\);
 #endif
 ],[$2],[$3],)
+CFLAGS=$SAVE_CFLAGS
+])
+
+dnl AX_KERNEL_VERSION(major, minor, level, comparison, action-if-true, action-if-false)
+AC_DEFUN(AX_KERNEL_VERSION, [
+SAVE_CFLAGS=$CFLAGS
+CFLAGS="-I$KINC -D__KERNEL__ -Werror"
+AC_TRY_COMPILE( 
+  [
+  #include <linux/version.h>
+  #include <linux/config.h>
+  ],
+  [
+  #if LINUX_VERSION_CODE $4 KERNEL_VERSION($1, $2, $3)
+  break_me_hard(\\\);
+  #endif
+  ],
+[$5],[$6],)
 CFLAGS=$SAVE_CFLAGS
 ])
 
@@ -81,19 +99,13 @@ esac
 
 dnl Check for the minimal kernel version supported
 AC_MSG_CHECKING(kernel version)
-SAVE_CFLAGS=$CFLAGS
-CFLAGS="-I$KINC -D__KERNEL__ -Werror"
-AC_TRY_COMPILE( 
-  [
-  #include <linux/version.h>
-  #include <linux/config.h>
-  ],
-  [
-  #if LINUX_VERSION_CODE <= KERNEL_VERSION(2,2,10)
-  break_me_hard(\\\);
-  #endif
-  ], AC_MSG_RESULT("ok"), AC_MSG_ERROR("check html documentation install section"))
-CFLAGS=$SAVE_CFLAGS
+AX_KERNEL_VERSION(2, 2, 10, <=, AC_MSG_RESULT("ok"), AC_MSG_ERROR("check html documentation install section"))
+
+dnl Check if we need to build the module with extra flags
+dnl FIXME this fix 2.5.19 build but perhaps its not the right way
+AC_MSG_CHECKING("wether module compilation need -DMODULE")
+AX_KERNEL_VERSION(2, 5, 19, ==, AC_MSG_RESULT("no"), AC_MSG_RESULT("yes"); EXTRA_CFLAGS_MODULE="$EXTRA_CFLAGS_MODULE -DMODULE")
+AC_SUBST(EXTRA_CFLAGS_MODULE)
 
 # FIXME: use config.h for the -D things ... 
 AC_MSG_CHECKING("whether malloc attribute is understood")
