--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.93 2002/06/25 04:09:07 phil_e Exp $)
+AC_REVISION($Id: configure.in,v 1.94 2002/06/28 19:31:26 phil_e Exp $)
 AC_PREREQ(2.13)
 AC_INIT(libop/op_config.h)
 
@@ -237,6 +237,9 @@ AC_SUBST(BFD_CXXFLAGS)
 AC_PATH_XTRA 
 LIBS="$X_PRE_LIBS $LIBS $X_LIBS -lX11 $X_EXTRA_LIBS"
 QT2_DO_IT_ALL
+if test "$have_qt2" == "no"; then
+	QT3_DO_IT_ALL
+fi
  
 # do NOT put tests here, they will fail in the case X is not installed !
  
