--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.95 2002/06/28 23:53:59 phil_e Exp $)
+AC_REVISION($Id: configure.in,v 1.96 2002/07/01 19:58:50 phil_e Exp $)
 AC_PREREQ(2.13)
 AC_INIT(libop/op_config.h)
 
@@ -104,7 +104,7 @@ AX_KERNEL_VERSION(2, 2, 10, <=, AC_MSG_RESULT("ok"), AC_MSG_ERROR("check html do
 dnl Check if we need to build the module with extra flags
 dnl FIXME this fix 2.5.19 build but perhaps its not the right way
 AC_MSG_CHECKING("wether module compilation need -DMODULE")
-AX_KERNEL_VERSION(2, 5, 19, ==, AC_MSG_RESULT("no"), AC_MSG_RESULT("yes"); EXTRA_CFLAGS_MODULE="$EXTRA_CFLAGS_MODULE -DMODULE")
+AX_KERNEL_VERSION(2, 5, 19, >=, AC_MSG_RESULT("no"), AC_MSG_RESULT("yes"); EXTRA_CFLAGS_MODULE="$EXTRA_CFLAGS_MODULE -DMODULE")
 AC_SUBST(EXTRA_CFLAGS_MODULE)
 
 # FIXME: use config.h for the -D things ... 
