--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.97 2002/07/02 22:07:12 phil_e Exp $)
+AC_REVISION($Id: configure.in,v 1.98 2002/07/04 23:23:39 phil_e Exp $)
 AC_PREREQ(2.13)
 AC_INIT(libop/op_config.h)
 
@@ -107,7 +107,14 @@ AC_MSG_CHECKING([whether module compilation need -DMODULE])
 AX_KERNEL_VERSION(2, 5, 19, >=, AC_MSG_RESULT("no"), AC_MSG_RESULT("yes"); EXTRA_CFLAGS_MODULE="$EXTRA_CFLAGS_MODULE -DMODULE")
 
 dnl linux/spinlock.h added at some point in past
-AC_CHECK_FILE("$KINC"/linux/spinlock.h, EXTRA_CFLAGS_MODULE="$EXTRA_CFLAGS_MODULE -DHAVE_LINUX_SPINLOCK_HEADER")
+AC_MSG_CHECKING([for "$KINC"/linux/spinlock.h])
+if test -f $KINC/linux/spinlock.h; then
+  EXTRA_CFLAGS_MODULE="$EXTRA_CFLAGS_MODULE -DHAVE_LINUX_SPINLOCK_HEADER"
+  AC_MSG_RESULT([yes])
+else
+  AC_MSG_RESULT([no])
+fi
+dnl AC_CHECK_FILE("$KINC"/linux/spinlock.h, EXTRA_CFLAGS_MODULE="$EXTRA_CFLAGS_MODULE -DHAVE_LINUX_SPINLOCK_HEADER")
 
 AC_SUBST(EXTRA_CFLAGS_MODULE)
 
