--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.98 2002/07/04 23:23:39 phil_e Exp $)
+AC_REVISION($Id: configure.in,v 1.99 2002/07/21 22:43:33 movement Exp $)
 AC_PREREQ(2.13)
 AC_INIT(libop/op_config.h)
 
@@ -18,7 +18,7 @@ AC_CONFIG_HEADER(config.h)
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
 PACKAGE=oprofile
-VERSION=0.3cvs
+VERSION=0.3
 
 dnl for the man page
 DATE="`date '+%a %d %B %Y'`"
