--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.107 2002/09/26 23:59:29 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.108 2002/10/16 19:21:43 phil_e Exp $)
 AC_PREREQ(2.13)
 AC_INIT(libop/op_config.h)
 
@@ -73,6 +73,7 @@ AC_PROG_CXX
 AC_CHECK_PROG(LD,ld,ld,)
 test "$LD" || AC_ERROR(ld not found)
 
+AC_MSG_CHECKING(for kernel OProfile support)
 AC_ARG_WITH(kernel-support, [  --with-kernel-support          Select if using CONFIG_OPROFILE],
 if test "$withval" = "yes"; then
 	OPROFILE_25=yes
@@ -80,15 +81,6 @@ fi
 ) 
 
 if test "$OPROFILE_25" != "yes"; then
-	AC_MSG_CHECKING(for kernel OProfile support)
-	AX_COMPILE_OPTION(CONFIG_OPROFILE, OPROFILE_25=yes, OPROFILE_25=no)
-	AX_COMPILE_OPTION(CONFIG_OPROFILE_MODULE, OPROFILE_25=yes, OPROFILE_25=$OPROFILE_25)
-	AC_MSG_RESULT($OPROFILE_25)
-fi
-AC_SUBST(OPROFILE_25)
- 
-if test "$OPROFILE_25" = "no"; then
- 
 	dnl  --- Find the Linux kernel, at least the headers ---
  
 	AC_SUBST(KSRC)
@@ -96,7 +88,14 @@ if test "$OPROFILE_25" = "no"; then
 	AC_ARG_WITH(linux, [  --with-linux=dir             Path to Linux source tree], KSRC=$withval) 
 	KINC=$KSRC/include
 	AC_SUBST(KINC)
-	 
+
+	AX_COMPILE_OPTION(CONFIG_OPROFILE, OPROFILE_25=yes, OPROFILE_25=no)
+	AX_COMPILE_OPTION(CONFIG_OPROFILE_MODULE, OPROFILE_25=yes, OPROFILE_25=$OPROFILE_25)
+fi
+AC_SUBST(OPROFILE_25)
+AC_MSG_RESULT($OPROFILE_25)
+ 
+if test "$OPROFILE_25" = "no"; then
 	if test ! -f $KINC/linux/autoconf.h; then
 	  AC_MSG_ERROR(no suitably configured kernel include tree found)
 	fi
