--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.108 2002/10/16 19:21:43 phil_e Exp $)
+AC_REVISION($Id: configure.in,v 1.109 2002/10/19 21:23:39 movement Exp $)
 AC_PREREQ(2.13)
 AC_INIT(libop/op_config.h)
 
@@ -74,7 +74,7 @@ AC_CHECK_PROG(LD,ld,ld,)
 test "$LD" || AC_ERROR(ld not found)
 
 AC_MSG_CHECKING(for kernel OProfile support)
-AC_ARG_WITH(kernel-support, [  --with-kernel-support          Select if using CONFIG_OPROFILE],
+AC_ARG_WITH(kernel-support, [  --with-kernel-support        Select if using CONFIG_OPROFILE],
 if test "$withval" = "yes"; then
 	OPROFILE_25=yes
 fi
@@ -268,6 +268,12 @@ AC_PATH_XTRA
 LIBS="$X_PRE_LIBS $LIBS $X_LIBS -lX11 $X_EXTRA_LIBS"
 QT_DO_IT_ALL
 
+dnl enable code to describe the binary layout of libdb files, for platform portability
+AC_ARG_ENABLE(abi,
+	[  --enable-abi                 enable abi portability code (default is disabled)],
+	enable_abi=$enableval, enable_abi=no)
+AC_SUBST(enable_abi)
+
 # try to find the docbook stylesheets
 if test -e /usr/share/sgml/docbook/stylesheet/xsl/nwalsh/xhtml/docbook.xsl; then
 	db_xsl=/usr/share/sgml/docbook/stylesheet/xsl/nwalsh/xhtml/docbook.xsl
@@ -291,6 +297,7 @@ AC_OUTPUT(make.common \
 	libop++/Makefile \
 	libopt++/Makefile \
 	libdb/Makefile \
+	libabi/Makefile \
 	module/Makefile \
 	dae/Makefile \
 	daemon/Makefile \
