re-open the tree. Welcome to 0.5cvs

--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.111 2002/11/06 17:27:55 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.112 2002/11/06 20:38:19 movement Exp $)
 AC_PREREQ(2.13)
 AC_INIT(libop/op_config.h)
 
@@ -18,7 +18,7 @@ AC_CONFIG_HEADER(config.h)
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
 PACKAGE=oprofile
-VERSION=0.4
+VERSION=0.5cvs
 
 dnl for the man page
 DATE="`date '+%a %d %B %Y'`"
