--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.112 2002/11/06 20:38:19 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.113 2002/11/06 23:50:18 movement Exp $)
 AC_PREREQ(2.13)
 AC_INIT(libop/op_config.h)
 
@@ -146,9 +146,26 @@ if test "$OPROFILE_25" = "no"; then
 	AX_COMPILE_OPTION(CONFIG_X86_WP_WORKS_OK, x86=1, x86=$x86)
 	AX_MSG_RESULT_YN($x86)
 	test "$x86" = 1 && arch="x86"
+ 
+	if test "$arch" = "unknown"; then
+	  AC_MSG_CHECKING(for ia64 architecture)
+	  AX_COMPILE_OPTION(CONFIG_IA64, ia64=1, ia64=0)
+	  AX_MSG_RESULT_YN($ia64)
+	  test "$ia64" = 1 && arch="ia64"
+	fi
+
 	test "$arch" = "unknown" && AC_MSG_ERROR(Unsupported architecture)
 	rm -f module/arch && ln -s "$arch" module/arch
 	ARCH_MAKEFILE=module/arch/Makefile
+
+	dnl check to see if kernel verion appropriate for arch
+	AC_MSG_CHECKING(arch/kernel version combination)
+	case "$arch" in
+	ia64)
+		AX_KERNEL_VERSION(2, 4, 18, <, AC_MSG_RESULT("ok"),
+			AC_MSG_ERROR("unsupported arch/kernel")) ;;
+	*) AC_MSG_RESULT("ok")
+	esac
 
 	dnl for now we do not support PREEMPT patch
 	AC_MSG_CHECKING([for preempt patch])
