more fixes. TODO: make --enable-abi work again

--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.115 2002/11/09 19:16:15 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.116 2002/11/09 20:21:04 movement Exp $)
 AC_PREREQ(2.13)
 
 AC_INIT(libop/op_config.h)
@@ -93,7 +93,7 @@ fi
 AC_SUBST(OPROFILE_25)
 AC_MSG_RESULT($OPROFILE_25)
 
-AM_CONDITIONAL(WITH_KERNEL_SUPPORT, test $OPROFILE_25 = true)
+AM_CONDITIONAL(WITH_KERNEL_SUPPORT, test $OPROFILE_25 = yes)
  
 if test "$OPROFILE_25" = "no"; then
 	if test ! -f $KINC/linux/autoconf.h; then
