Make separate objdir work. module build fails but all is OK with --with-kernel-support

--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.116 2002/11/09 20:21:04 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.117 2002/11/09 21:37:44 movement Exp $)
 AC_PREREQ(2.13)
 
 AC_INIT(libop/op_config.h)
@@ -150,7 +150,7 @@ if test "$OPROFILE_25" = "no"; then
 	fi
 
 	test "$arch" = "unknown" && AC_MSG_ERROR(Unsupported architecture)
-	rm -f module/arch && ln -s "$arch" module/arch
+	(cd ${srcdir}/module/ && rm -f arch/ && ln -s $arch arch)
 	ARCH_MAKEFILE=module/arch/Makefile
 
 	dnl check to see if kernel verion appropriate for arch
