re-add -W -Wall and optionnaly -Werror to user space compilation
regards,
Phil

--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.122 2002/11/10 16:36:12 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.123 2002/11/11 08:42:04 phil_e Exp $)
 AC_PREREQ(2.13)
 
 AC_INIT(libop/op_config.h)
@@ -197,7 +197,6 @@ CFLAGS=$SAVE_CFLAGS
  
 AC_SUBST(EXTRA_CFLAGS)
 
-
 dnl --- user space configuration ---
 
 # we are weak, so do not support separate build dir
@@ -306,6 +305,15 @@ AM_CONDITIONAL(have_qt, test -n "$QT_LIB")
 
 # inihibited for now
 AM_CONDITIONAL(build_oprof_report, false)
+
+CFLAGS="$CFLAGS -W -Wall"
+CXXFLAGS="$CXXFLAGS -W -Wall"
+
+# enable -Werror for non-release versions.
+if echo "$VERSION" | grep cvs; then
+    CFLAGS="$CFLAGS -Werror"
+    CXXFLAGS="$CXXFLAGS -Werror"
+fi
  
 AC_OUTPUT(Makefile \
 	libutil/Makefile \
