--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.125 2002/11/14 00:56:02 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.126 2002/11/14 04:12:33 graydon Exp $)
 AC_PREREQ(2.13)
 
 AC_INIT(libop/op_config.h)
@@ -136,18 +136,29 @@ if test "$OPROFILE_25" = "no"; then
 	fi
 	 
 	arch="unknown"
-	AC_MSG_CHECKING([for x86 architecture])
-	AX_COMPILE_OPTION(CONFIG_X86, x86=1, x86=0)
-	AX_COMPILE_OPTION(CONFIG_X86_WP_WORKS_OK, x86=1, x86=$x86)
-	AX_MSG_RESULT_YN($x86)
-	test "$x86" = 1 && arch="x86"
- 
-	if test "$arch" = "unknown"; then
-	  AC_MSG_CHECKING(for ia64 architecture)
-	  AX_COMPILE_OPTION(CONFIG_IA64, ia64=1, ia64=0)
-	  AX_MSG_RESULT_YN($ia64)
-	  test "$ia64" = 1 && arch="ia64"
+	AC_MSG_CHECKING(for x86-64 architecture)
+	AX_COMPILE_OPTION(CONFIG_X86_64, x8664=1, x8664=0)
+	AX_MSG_RESULT_YN($x8664)
+	BUILD_HAMMER=no
+	if test "$x8664" -eq 1; then
+		arch="x86"
+		BUILD_HAMMER=yes
+	else
+		AC_MSG_CHECKING(for x86 architecture)
+		AX_COMPILE_OPTION(CONFIG_X86, x86=1, x86=0)
+		AX_COMPILE_OPTION(CONFIG_X86_WP_WORKS_OK, x86=1, x86=$x86)
+		AX_MSG_RESULT_YN($x86)
+		test "$x86" = 1 && arch="x86"
+		
+		if test "$arch" = "unknown"; then
+	  		AC_MSG_CHECKING(for ia64 architecture)
+	  		AX_COMPILE_OPTION(CONFIG_IA64, ia64=1, ia64=0)
+	  		AX_MSG_RESULT_YN($ia64)
+	  		test "$ia64" = 1 && arch="ia64"
+		fi
+	
 	fi
+	AC_SUBST(BUILD_HAMMER)
 
 	test "$arch" = "unknown" && AC_MSG_ERROR(Unsupported architecture)
 	(cd ${srcdir}/module/ && rm -f arch/ && ln -s $arch arch)
