-Add supports for AMD processors family12h/14h/15h

--- a/events/Makefile.am
+++ b/events/Makefile.am
@@ -35,6 +35,9 @@ event_files = \
 	x86-64/hammer/events x86-64/hammer/unit_masks \
 	x86-64/family10/events x86-64/family10/unit_masks \
 	x86-64/family11h/events x86-64/family11h/unit_masks \
+	x86-64/family12h/events x86-64/family12h/unit_masks \
+	x86-64/family14h/events x86-64/family14h/unit_masks \
+	x86-64/family15h/events x86-64/family15h/unit_masks \
 	arm/xscale1/events arm/xscale1/unit_masks \
 	arm/xscale2/events arm/xscale2/unit_masks \
 	arm/armv6/events arm/armv6/unit_masks \
