Signed-off-by: Gert Wollny <gw.fossdev@gmail.com> Acked-by:      Maynard Johnson <maynardj@us.ibm.com>
Description:
This patch makes changes to oprofile gui files to use qt3Support to facilitate
building with either qt3 or qt4.  The configure script now has a new option:
--enable-gui=[qt3|qt4|yes|no].  If not given or set to yes, the gui build
defaults to qt3, which is the same as what it has done in the past.

--- a/gui/ui/Makefile.am
+++ b/gui/ui/Makefile.am
@@ -2,7 +2,7 @@ EXTRA_DIST = oprof_start.base.ui
 
 if have_qt
 
-AM_CPPFLAGS = @QT_INCLUDES@
+AM_CPPFLAGS = @QT_CFLAGS@
 
 AM_CXXFLAGS = @OP_CXXFLAGS@
 
