--- a/configure.in
+++ b/configure.in
@@ -238,7 +238,7 @@ AC_ARG_ENABLE(werror,
         enable_werror=$enableval, enable_werror=yes)
 if test "$enable_werror" = yes; then
 	# enable -Werror for non-release versions.
-	if echo "$VERSION" | grep cvs >/dev/null; then
+	if echo "$VERSION" | grep git >/dev/null; then
 		AX_CFLAGS_OPTION(OP_CFLAGS,[-Werror])
 		AX_CXXFLAGS_OPTION(OP_CXXFLAGS,[-Werror])
 	fi
