--- a/doc/oprofile.1.in
+++ b/doc/oprofile.1.in
@@ -35,7 +35,7 @@ oprofile \- a system-wide profiler
 .br
 .SH DESCRIPTION
 OProfile is a profiling system for systems running Linux
-2.2, 2.4, and 2.6. Profiling runs transparently in the background and profile
+2.6 and greater. Profiling runs transparently in the background and profile
 data can be collected at any time. OProfile makes use of the hardware
 performance counters provided on Intel, AMD, and other processors,
 and uses a timer-interrupt based mechanism on CPUs without counters.
@@ -159,11 +159,8 @@ Event description files used by OProfile.
 .I /var/lib/oprofile/samples/oprofiled.log
 The user-space daemon logfile.
 .TP
-.I /var/lib/oprofile/opdev, /var/lib/oprofile/ophashmapdev, /var/lib/oprofile/opnotedev
-The device files for communication with the Linux 2.4 kernel module. 
-.TP
 .I /dev/oprofile
-The device filesystem for communication with the Linux 2.6 kernel module. 
+The device filesystem for communication with the Linux kernel module. 
 .TP
 .I /var/lib/oprofile/samples/
 The location of the generated sample files.
